--- a/src/index.html
+++ b/src/index.html
@@ -1,9 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Global Site Tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-105840000-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments)};
+        gtag('js', new Date());
+
+        gtag('config', 'UA-105840000-1');
+    </script>
+
     <meta charset="UTF-8">
     <title>Jonco Lab - Web development</title>
     <link rel="stylesheet" href="styles/style.css">
+    <script src="https://www.gstatic.com/firebasejs/4.3.0/firebase.js"></script>
+    <script>
+        var config = {
+            apiKey: "AIzaSyAmsgseYaZreSHZCpfiyRHGGvb-15lgPyw",
+            authDomain: "joncolab-pro.firebaseapp.com",
+            databaseURL: "https://joncolab-pro.firebaseio.com",
+            projectId: "joncolab-pro",
+            storageBucket: "joncolab-pro.appspot.com",
+            messagingSenderId: "271754923803"
+        };
+        firebase.initializeApp(config);
+    </script>
     <script src="scripts/js/jquery-3.2.1.min.js" type="text/javascript"></script>
     <script src="scripts/js/script.js" type="text/javascript"></script>
 </head>
@@ -123,7 +145,7 @@
                 <input type="email" name="email" id="email" placeholder="Your Email" required>
                 <input name="subject" id="subject" placeholder="Subject" required>
                 <textarea name="message" id="message" style="resize: none;" placeholder="Your message"></textarea>
-                <input type="submit">
+                <input type="submit" id="submit">
                 <label for="submit">Send</label>
             </form>
             <ul id="contacts-list">
