--- a/src/index.html
+++ b/src/index.html
@@ -44,7 +44,7 @@
     <section id="start" class="content-section">
         <div class="content-block">
             <h1 id="tagline">
-                <span class="name">Do let professionals to code.</span>
+                <span class="name"><span><</span>DoLetProfessionalsToCode /></span>
                 <span class="underline"></span>
             </h1>
         </div>
@@ -103,7 +103,7 @@
             <span class="ico">☺</span>
         </h2>
         <article class="content">
-            <img id="about-visual" src="images/jonco-planet.png">
+            <img id="about-visual" src="images/Без%20имени.png">
             <div class="text">
                 <p class="text-block">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit.
