--- a/src/index.html
+++ b/src/index.html
@@ -26,6 +26,12 @@
         };
         firebase.initializeApp(config);
     </script>
+    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <script>
+        (adsbygoogle = window.adsbygoogle || []).push({
+            google_ad_client: "ca-pub-1836167343820557",
+            enable_page_level_ads: true });
+    </script>
     <script src="scripts/js/jquery-3.2.1.min.js" type="text/javascript"></script>
     <script src="scripts/js/script.js" type="text/javascript"></script>
 </head>
