--- a/src/index.html
+++ b/src/index.html
@@ -30,6 +30,10 @@
     <script src="scripts/js/script.js" type="text/javascript"></script>
 </head>
 <body>
+<video poster="images/bg-2.png" id="bgvid" playsinline autoplay muted loop>
+    <source src="video/bg.webm" type="video/webm">
+    <source src="video/bg.mp4" type="video/mp4">
+</video>
 <header>
     <img id="logo" alt="Jonco Lab Web Development" src="images/jonco-logo2.png">
     <nav id="menu">
@@ -128,9 +132,9 @@
             <span class="ico">☺</span>
         </h2>
         <div class="gallery">
-            <img id="ztsb" src="images/jonco-logo2.png" alt="Transkarpathian Universal Stock Exchange">
-            <img id="th-upizol" src="images/jonco-logo2.png" alt="Ukrpromizoliatsia Trade House">
-            <img id="ier" src="images/jonco-logo2.png" alt="International Relations Faculty of Uzhgorod National University">
+            <img id="ztsb" src="images/ztsb.png" alt="Transkarpathian Universal Stock Exchange">
+            <img id="th-upizol" src="images/th-upizol.png" alt="Ukrpromizoliatsia Trade House">
+            <img id="ier" src="images/UzNU.png" alt="International Relations Faculty of Uzhgorod National University">
         </div>
     </section>
     <section id="contacts" class="content-section">
