--- a/src/index.html
+++ b/src/index.html
@@ -150,7 +150,7 @@
         </h2>
         <div class="content">
             <form id="feedback-form">
-                <label for="name">Send us an email:</label>
+                <label for="name">Have some questions? Send us an email:</label>
                 <input id="name" name="name" placeholder="Your name" required>
                 <input type="email" name="email" id="email" placeholder="Your Email" required>
                 <input name="subject" id="subject" placeholder="Subject" required>
