--- a/src/index.html
+++ b/src/index.html
@@ -1,39 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <!-- Global Site Tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-105840000-1"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments)};
-        gtag('js', new Date());
-
-        gtag('config', 'UA-105840000-1');
-    </script>
-
     <meta charset="UTF-8">
     <title>Jonco Lab - Web development</title>
     <link rel="stylesheet" href="styles/style.css">
-    <script src="https://www.gstatic.com/firebasejs/4.3.0/firebase.js"></script>
-    <script>
-        var config = {
-            apiKey: "AIzaSyAmsgseYaZreSHZCpfiyRHGGvb-15lgPyw",
-            authDomain: "joncolab-pro.firebaseapp.com",
-            databaseURL: "https://joncolab-pro.firebaseio.com",
-            projectId: "joncolab-pro",
-            storageBucket: "joncolab-pro.appspot.com",
-            messagingSenderId: "271754923803"
-        };
-        firebase.initializeApp(config);
-    </script>
-    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-    <script>
-        (adsbygoogle = window.adsbygoogle || []).push({
-            google_ad_client: "ca-pub-1836167343820557",
-            enable_page_level_ads: true });
-    </script>
-    <script src="scripts/js/jquery-3.2.1.min.js" type="text/javascript"></script>
-    <script src="scripts/js/script.js" type="text/javascript"></script>
+    <script src="scripts/App.js" type="text/javascript"></script>
 </head>
 <body>
 <video poster="images/bg-2.png" id="bgvid" playsinline autoplay muted loop>
@@ -54,7 +25,7 @@
     <section id="start" class="content-section">
         <div class="content-block">
             <h1 id="tagline">
-                <span class="name"><span><</span>DoLetProfessionalsToCode /></span>
+                <span class="name">&lsaquo;DoLetProfessionalsToCode /&rsaquo;</span>
                 <span class="underline"></span>
             </h1>
         </div>
@@ -183,5 +154,34 @@
         </div>
     </section>
 </main>
+    <script src="https://www.gstatic.com/firebasejs/4.3.0/firebase.js"></script>
+    <script>
+        var config = {
+            apiKey: "AIzaSyAmsgseYaZreSHZCpfiyRHGGvb-15lgPyw",
+            authDomain: "joncolab-pro.firebaseapp.com",
+            databaseURL: "https://joncolab-pro.firebaseio.com",
+            projectId: "joncolab-pro",
+            storageBucket: "joncolab-pro.appspot.com",
+            messagingSenderId: "271754923803"
+        };
+        firebase.initializeApp(config);
+    </script>
+    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <script>
+        (adsbygoogle = window.adsbygoogle || []).push({
+            google_ad_client: "ca-pub-1836167343820557",
+            enable_page_level_ads: true });
+    </script>
+    <script src="scripts/js/jquery-3.2.1.min.js" type="text/javascript"></script>
+    <script src="scripts/js/script.js" type="text/javascript"></script>
+    <!-- Global Site Tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-105840000-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments)};
+        gtag('js', new Date());
+
+        gtag('config', 'UA-105840000-1');
+    </script>
 </body>
 </html>
