--- a/src/index.html
+++ b/src/index.html
@@ -119,12 +119,12 @@
             <span class="ico">☺</span>
         </h2>
         <div class="content">
-            <form id="feedback-form">
+            <form id="feedback-form" method="post">
                 <label for="name">Send us an email:</label>
                 <input id="name" name="name" placeholder="Your name" required>
                 <input type="email" name="email" id="email" placeholder="Your Email" required>
                 <input name="subject" id="subject" placeholder="Subject" required>
-                <textarea name="message" id="message" style="resize: none;" placeholder="Your message"></textarea>
+                <textarea name="message" id="message" style="resize: none;" placeholder="Your message" required></textarea>
                 <input type="submit" id="submit">
                 <label for="submit">Send</label>
             </form>
