--- a/src/index.html
+++ b/src/index.html
@@ -83,7 +83,7 @@
             <span class="ico">☺</span>
         </h2>
         <article class="content">
-            <img id="about-visual" src="images/Без%20имени.png">
+            <img id="about-visual" src="images/jonco-blue-planet.png">
             <div class="text">
                 <p class="text-block">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit.
@@ -154,17 +154,7 @@
     </section>
 </main>
 <script src="https://www.gstatic.com/firebasejs/4.3.0/firebase.js"></script>
-<script>
-    var config = {
-        apiKey: "AIzaSyAmsgseYaZreSHZCpfiyRHGGvb-15lgPyw",
-        authDomain: "joncolab-pro.firebaseapp.com",
-        databaseURL: "https://joncolab-pro.firebaseio.com",
-        projectId: "joncolab-pro",
-        storageBucket: "joncolab-pro.appspot.com",
-        messagingSenderId: "271754923803"
-    };
-    firebase.initializeApp(config);
-</script>
+<script src="scripts/firebase-script.js" type="text/javascript"></script>
 <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <script>
     (adsbygoogle = window.adsbygoogle || []).push({
@@ -175,13 +165,12 @@
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-105840000-1"></script>
 <script>
     window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments)};
+    function gtag(){dataLayer.push(arguments)}
     gtag('js', new Date());
 
     gtag('config', 'UA-105840000-1');
 </script>
-<script src="scripts/js/jquery-3.2.1.min.js" type="text/javascript"></script>
-<script src="scripts/js/script.js" type="text/javascript"></script>
-<script src="scripts/js/firebase-script.js" type="text/javascript"></script>
+<script src="scripts/jquery-3.2.1.min.js" type="text/javascript"></script>
+<script src="scripts/script.js" type="text/javascript"></script>
 </body>
 </html>
