--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>Jonco Lab - Web development</title>
     <link rel="stylesheet" href="styles/style.css">
 </head>
@@ -153,7 +154,12 @@
         </div>
     </section>
 </main>
-<script src="https://www.gstatic.com/firebasejs/4.3.0/firebase.js"></script>
+<script src="/__/firebase/4.4.0/firebase-app.js"></script>
+<script src="/__/firebase/4.4.0/firebase-auth.js"></script>
+<script src="/__/firebase/4.4.0/firebase-database.js"></script>
+<script src="/__/firebase/4.4.0/firebase-messaging.js"></script>
+<script src="/__/firebase/4.4.0/firebase-storage.js"></script>
+<script src="/__/firebase/init.js"></script>
 <script src="scripts/firebase-script.js" type="text/javascript"></script>
 <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <script>
