--- a/src/index.html
+++ b/src/index.html
@@ -64,17 +64,17 @@
             <figure id="development">
                 <figcaption>Development</figcaption>
                 <div class="line"></div>
-                <span class="ico"></span>
+                <span class="ico">c</span>
             </figure>
             <figure id="support">
                 <figcaption>Support</figcaption>
                 <div class="line"></div>
-                <span class="ico"></span>
+                <span class="ico">s</span>
             </figure>
             <figure id="expansion">
                 <figcaption>Improvement & Expansion</figcaption>
                 <div class="line"></div>
-                <span class="ico"></span>
+                <span class="ico">e</span>
             </figure>
         </div>
     </section>
@@ -131,20 +131,20 @@
             </form>
             <ul id="contacts-list">
                 <li class="contacts-item" id="tel">
-                    <span class="ico">☺</span>
-                    <span class="contact">Tel</span>
+                    <span class="ico">p</span>
+                    <span class="contact">+8-800-555-3-555</span>
                 </li>
                 <li class="contacts-item" id="mail">
-                    <span class="ico">☺</span>
-                    <span class="contact">Email</span>
+                    <span class="ico">m</span>
+                    <span class="contact">joncolab@gmail.com</span>
                 </li>
                 <li class="contacts-item" id="vk">
-                    <span class="ico">☺</span>
+                    <span class="ico">v</span>
                     <span class="contact">VKontakte</span>
                 </li>
                 <li class="contacts-item" id="tw">
-                    <span class="ico">☺</span>
-                    <span class="contact">Twitter</span>
+                    <span class="ico">f</span>
+                    <span class="contact">Facebook</span>
                 </li>
             </ul>
             <div class="big-letter">
