--- a/src/index.html
+++ b/src/index.html
@@ -84,7 +84,16 @@
             <span class="ico">☺</span>
         </h2>
         <article class="content">
-            <img id="about-visual" src="images/jonco-blue-planet.png">
+            <div id="about-visual">
+                <img src="svg/react.svg">
+                <img src="svg/css3.svg">
+                <img src="svg/github.svg">
+                <img src="svg/gulp.svg">
+                <img src="svg/html5.svg">
+                <img src="svg/nodejs.svg">
+                <img src="svg/npm.svg">
+                <img src="svg/sass.svg">
+            </div>
             <div class="text">
                 <p class="text-block">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit.
@@ -178,5 +187,6 @@
 </script>
 <script src="scripts/jquery-3.2.1.min.js" type="text/javascript"></script>
 <script src="scripts/script.js" type="text/javascript"></script>
+<script src="scripts/animation.js"></script>
 </body>
 </html>
